Readd webpack for demo

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Space shipwright demo</title>
-    <script type="module" src="../dist/demo.js"></script>
+    <script src="./demo.js"></script>
     <style>
       body {
         color: white;
