Make color an independent parameter

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -16,8 +16,12 @@
   </head>
   <body>
     <div>
-      <label for="fseed">Faction hash: </label>
+      <label for="fseed">Faction seed: </label>
       <input id="fseed"></input>
+    </div>
+    <div>
+      <label for="cseed">Color seed: </label>
+      <input id="cseed"></input>
     </div>
     <div>
       <label for="size">Size: </label>
