Add separate parameters for layout and color

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -16,16 +16,16 @@
   </head>
   <body>
     <div>
-      <label for="fseed">Faction seed: </label>
-      <input id="fseed"></input>
+      <label for="sseed">Ship seed: </label>
+      <input id="sseed"></input>
+    </div>
+    <div>
+      <label for="lseed">Layout seed: </label>
+      <input id="lseed"></input>
     </div>
     <div>
       <label for="cseed">Color seed: </label>
       <input id="cseed"></input>
-    </div>
-    <div>
-      <label for="size">Size: </label>
-      <input id="size"></input>
     </div>
     <div>
       <button id="updateAction">Update</button>
