Add force size parameter

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -55,6 +55,10 @@
           <input id="cseed"></input>
           <button id="cnext">++</button>
         </li>
+        <li>
+          <label for="fsize">Force size:</label>
+          <input id="fsize"></input>
+        </li>
       </ul>
     </fieldset>
    <fieldset>
